--- a/index.html
+++ b/index.html
@@ -105,10 +105,26 @@
 
 		    <hr />
 
+		    <div class="dropdown mb-5">
+		    	<form>
+		    		<label for="projects"><h3>Projects:<img src="https://pixelsafari.neocities.org/favicon/object/tech/tablet.gif"></h3></label>
+					<select name="project" id="project">
+					  <option value="industrial">industrial</option>
+					  <option value="service">service</option>
+					  <option value="medical">medical</option>
+					  <option value="military">military</option>
+					</select>
+				</form>
+
+				<p><a href="https://www.ontechnos.com/what-are-the-four-4-types-of-robotics#:~:text=The%20four%20types%20of%20robotics%E2%80%94industrial%2C%20service%2C%20medical%2C,and%20precision%20in%20production%20processes." target="_blank"> source: types of robotics</a>
+			</div>
+
+			<hr />
+
 		    <!-- PREFERRRED ROBOTICS PROJECT -->
 
 		    <div class="project mb-5">
-		    <h3>Preferred Robotics Project <img src="https://pixelsafari.neocities.org/favicon/object/tech/computer10.gif"></h3>
+		    <h3>Reason For Joining <img src="https://pixelsafari.neocities.org/favicon/object/tech/computer10.gif"></h3>
 
 		    <textarea name="message" rows="3" cols="10" class="form-control" placeholder="Choose a project..."></textarea>
 			<br />
@@ -119,14 +135,14 @@
 		  <!--div for button-->
 		  <div class="button">
 		  		<div class="offset-sm-5">
-		   			<button type="submit" class="btn btn-outline-info btn-lg">register</button>
+		   			<button type="submit" class="btn btn-outline-info btn-lg">submit －O－</button>
 		   		 </div>
 		   </div>
 		</form>
 	</div>
 
 	<div class="footer">
-		<p><img src="https://nukochannel.neocities.org/NukoImg/Activities/Hobbies/nukoGameConsole.gif"> Yao, Harmony Gail K. - 9Topaz</p>
+		<p><img src="https://nukochannel.neocities.org/NukoImg/Activities/Hobbies/nukoGameConsole.gif"> | Yao, Harmony Gail K. - 9Topaz</p>
 	</div>
 
 </body>
